# cea

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: basic_build.yml  docs.yml
docs/: logo.tex
samples/: rp1311_examples.inp
source/: CMakeLists.txt  atomic_data.f90  cea.f90  detonation.f90  equilibrium.f90  input.f90  main.f90  mixture.f90  param.f90.in  rocket.f90  shock.f90  shock_test.pf  thermo.f90  transport.f90
source/bind/: CMakeLists.txt  libcea.pyx
source/bind/c/: bindc.F90
source/bind/python/: CEA.pyx
source/bind/python/cea/samples/: h2_o2.py  sample_plots.py
test/main_interface/: test_main.py
test/main_interface/test_output/: get_output.py
